iron gallery/iron-gallery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
  labels:
    run: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: iron-gallery
        image: kodekloud/irongallery:2.0
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        volumeMounts:
          - mountPath: /usr/share/nginx/html/uploads
            name: images
          - mountPath: /usr/share/nginx/html/data
            name: config
        resources:
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}
