iron gallery/iron-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  selector:
    db: mariadb
  ports:
    - protocol: TCP
      port: 3306
