iron gallery/iron-gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  type: NodePort
  selector:
    run: iron-gallery
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30099
